--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,17 @@ footer p {
     line-height: 1.2;
 }
 
+footer a {
+    color: aliceblue;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+footer a:hover {
+    color: #f5f5f5;
+    text-decoration: underline;
+}
+
 .wrapper {
     min-height: 100%;
     margin-bottom: -50px;
